@@ -13,6 +13,15 @@ AC_REQUIRE([CL_TERMCAP])dnl
 if test $ac_cv_search_tgetent != no ; then
   AC_LIB_LINKFLAGS_BODY(readline)
   AC_CHECK_HEADERS(readline/readline.h)
+  AC_MSG_CHECKING([for rl_already_prompted])
+  AC_TRY_COMPILE([
+#include <stdio.h>
+#include <readline/readline.h>
+  ],[rl_already_prompted = 1;],
+  ac_cv_header_readline_readline_h=yes
+  AC_MSG_RESULT([yes]),
+  ac_cv_header_readline_readline_h=no
+  AC_MSG_RESULT([no; readline is too old and will not be used]))
   if test $ac_cv_header_readline_readline_h = yes ; then
     AC_SEARCH_LIBS(readline, readline)
     # newer versions of readline prepend "rl_"
