@@ -1,5 +1,10 @@
 2002-09-29  Sam Steingold  <sds@gnu.org>
 
+	* m4/readline.m4 (CL_READLINE): check for `rl_already_prompted'
+	and reject readline versions that lack it
+
+2002-09-29  Sam Steingold  <sds@gnu.org>
+
 	* intparam.c: include <stdlib.h> for exit(3) to avoid a warning
 
 2002-09-26  Sam Steingold  <sds@gnu.org>
